# TheLonelyTree

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  LICENSE  Makefile  README.md  steam_appid.txt
data/artFiles/SteamAssets/: TheLonelyTree-SteamAssets.sketch
data/artFiles/logo/: logo.aseprite
include/: entry.h  entry_type.h  leaf_manager.h  noise_generation.h  the_lonely_tree.h  tree_branch.h  tree_manager.h  tree_node.h  tree_renderer_component.h  user_tree.h  world_generation.h
include/engine/: aabb.h  audio.h  camera.h  component.h  constants.h  crypto.h  font.h  frame_buffer_generation.h  gameobject.h  glfw_wrapper.h  gltf_loader.h  grass.h  http_client.h  image.h  input.h  input_field.h  key_code.h  light.h  light_directional.h  light_spot.h  logger.h  mesh.h  mesh_comp.h  mesh_generation.h  mesh_generation_buffers.h  mouse_button_code.h  render_manager.h  render_object.h  render_object_component.h  save_file.h  shader.h  str_utils.h  text.h  texture.h  texture_type.h  ui_canvas.h  ui_component.h  ui_render_object.h
resources/models/backpack/: license.txt
resources/models/bird/: license.txt  scene.gltf
resources/models/butterfly/: license.txt  scene.gltf
resources/models/tree/: license.txt  scene.gltf
resources/shaders/: clouds.frag  grass.frag  grass.geom  grass.vert  image.frag  leaf.frag  leaf.geom  leaf.vert  leaf_sm.geom  light.frag  light.vert  model.frag  model.vert  screen.frag  screen.vert  shadowMap.frag  shadowMap.vert  skybox.frag  skybox.vert  tree.frag  tree.geom  tree.vert  tree_sm.geom
scripts/: imageMerge.py
src/: entry.cpp  leaf_manager.cpp  main.cpp  the_lonely_tree.cpp  tree_branch.cpp  tree_manager.cpp  tree_node.cpp  tree_renderer_component.cpp  user_tree.cpp  world_generation.cpp
src/engine/: audio.cpp  camera.cpp  component.cpp  font.cpp  gameobject.cpp  glfw_wrapper.cpp  gltf_loader.cpp  grass.cpp  http_client.cpp  image.cpp  input.cpp  input_field.cpp  light.cpp  light_directional.cpp  light_spot.cpp  logger.cpp  mesh.cpp  mesh_comp.cpp  platform_folders.cpp  render_manager.cpp  render_object.cpp  render_object_component.cpp  save_file.cpp  shader.cpp  str_utils.cpp  text.cpp  texture.cpp  ui_canvas.cpp  ui_component.cpp  ui_render_object.cpp
